[gd_scene load_steps=3 format=3 uid="uid://dgxny8yqlacxr"]

[ext_resource type="Theme" uid="uid://cyk224o6irr6" path="res://assets/defaulttheme.tres" id="1_5jsvc"]
[ext_resource type="Script" path="res://scripts/info_popup.gd" id="2_vfflk"]

[node name="InfoPopup" type="Control" groups=["Popup"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5jsvc")
script = ExtResource("2_vfflk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.345703
anchor_top = 0.329861
anchor_right = 0.654297
anchor_bottom = 0.670139
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -61.5001
offset_right = -4.00027
offset_bottom = 62.4999
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Information"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Test text inside the infobox. This test tests text inside the infobox. This is a cool test.[/center]"
fit_content = true

[node name="Control" type="Control" parent="Panel/VBox"]
layout_mode = 2

[node name="Btns" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="OkBtn" type="Button" parent="Panel/VBox/Btns"]
layout_mode = 2
text = "OK"
metadata/_edit_use_anchors_ = true

[node name="SimBtn" type="Button" parent="Panel/VBox/Btns"]
layout_mode = 2
text = "Simulate"

[connection signal="pressed" from="Panel/VBox/Btns/OkBtn" to="." method="_on_ok_btn_pressed"]
[connection signal="pressed" from="Panel/VBox/Btns/SimBtn" to="." method="_on_sim_btn_pressed"]
